# HireAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  start_hireagent.command
app/: __init__.py  audit.py  config.py  extraction.py  guardrails.py  llm.py  main.py  parsers.py  prompts.py  questions.py  reports.py  schemas.py  scoring.py  storage.py  text_hygiene.py  workflow.py
samples/: jd_ai_business.txt
samples/resumes/: 01_林晓_AI产品.txt  02_周然_内容运营.txt  03_陈卓_业务分析.txt
scripts/: check_qwen.py  smoke_check.py
static/: app.js  index.html  styles.css
tests/: __init__.py  test_feedback_api.py  test_guardrails.py  test_llm.py  test_parsers.py  test_reports.py  test_scoring.py  test_storage.py  test_workflow.py
